--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,13 @@
-/.phpunit.cache
 /node_modules
-/public/build
+/vendor
+.env
+.DS_Store
 /public/hot
 /public/storage
 /storage/*.key
-/storage/pail
-/vendor
-.env
-.env.backup
-.env.production
-.phpactor.json
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
-/auth.json
-/.fleet
+/storage/framework/cache/*
+/storage/framework/sessions/*
+/storage/framework/views/*
+/storage/logs/*
 /.idea
-/.nova
 /.vscode
-/.zed
