--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "@inertiajs/vue3": "^2.0.3",
+        "vue": "^3.5.13"
     }
 }
