--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     },
     "devDependencies": {
         "@tailwindcss/vite": "^4.0.0",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.2.0",
+        "postcss": "^8.5.3",
         "tailwindcss": "^4.0.0",
         "vite": "^6.0.11"
     },
