--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@inertiajs/vue3": "^2.0.3",
+        "@vitejs/plugin-vue": "^5.2.1",
         "vue": "^3.5.13"
     }
 }
